--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
     }
 
     .button-act {
-        @apply border-1 rounded-[5px] border-[#D9DCE1] px-2 py-1 text-[#bfc2c8] font-light cursor-pointer;
+        @apply border-1 rounded-[5px] border-[#D9DCE1] px-2 py-1 text-[#bfc2c8] font-light cursor-pointer hover:text-white;
     }
 
     .borders-text1 {
